<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:layout_width="260dp"
        android:layout_height="147dp"
        android:text="@string/jogo_da_velha"
        android:textSize="64sp"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="74dp"
        android:id="@+id/novoJogo"
        android:text="@string/novo_jogo"
        android:textSize="20sp"
        android:backgroundTint="@color/azul"
        android:layout_marginTop="77dp"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="74dp"
        android:id="@+id/sair"
        android:text="@string/sair"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        android:layout_marginTop="77dp"/>

    <Button
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"/>

</LinearLayout>